--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </div>
         <center>
             <div class="home_mainDiv">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/roSjGTbjyEY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/roSjGTbjyEY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="col-lg-15 col-md-12 col-sm-15 col-xs-15"></iframe>
 
                 <hr>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.9399262250517!2d75.54705251533146!3d20.95492749566978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd90e0c97152e91%3A0x96a4527852a3ae2e!2sRustomjie%20International!5e0!3m2!1sen!2sin!4v1605950102651!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.9399262250517!2d75.54705251533146!3d20.95492749566978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd90e0c97152e91%3A0x96a4527852a3ae2e!2sRustomjie%20International!5e0!3m2!1sen!2sin!4v1605950102651!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="col-lg-15 col-md-15 col-sm-15 col-xs-15"></iframe>
             </div>
         </center>
         <div class="page-header" id="campus">
