--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ For More Information Contact info@rustomjieinternational.edu.in
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="achievements">
             <h2 class="text-capitalize">Achievements</h2>
             <span>
-                <img class="alumni" src="chinmayee-talele.jpg">
+                <img id="alumni" src="chinmayee-talele.jpg">
                 <h2>Chinmayee Talele</h2>
                 <h2>National Topper 2012-13</h2>
                 <img class="ach" src="sakshi-rane.jpg">
